# first-mile-guide

./: .gitignore  README.md  index.html
.github/agents/: standards-writer.agent.md
.github/skills/wmo-first-mile/: SKILL.md
.github/workflows/: first-mile-guide.yml  test-first-mile-guide.yml
first-mile-guide/: Makefile  README.md  asciidoc-link-check-config.json  first-mile-guide-DRAFT.docx  index.adoc
first-mile-guide/images/: README.md
first-mile-guide/sections/clause1/: index.adoc
first-mile-guide/sections/clause10/: index.adoc
first-mile-guide/sections/clause11/: index.adoc
first-mile-guide/sections/clause2/: index.adoc
first-mile-guide/sections/clause3/: index.adoc
first-mile-guide/sections/clause4/: index.adoc
first-mile-guide/sections/clause5/: index.adoc
guide/: first-mile-guide-DRAFT.docx  first-mile-guide-DRAFT.html
reference-implementations/c-nanopb-example/: CMakeLists.txt  README.md  main.c
reference-implementations/c-nanopb-example/schema/: firstmile.pb.c  firstmile.pb.h
reference-implementations/c-nanopb-example/schema/google/protobuf/: empty.pb.c  empty.pb.h  timestamp.pb.c  timestamp.pb.h
reference-implementations/python-example/: Pipfile  README.md  data-receiver.py  data-sender.py  payload-generator.py
requirements/: requirements.adoc
src/protos/: firstmile.proto
src/python-example/: Pipfile  README.md  data-receiver.py  data-sender.py  firstmile-sender.py  payload_generator.py  readme_firstmile.adoc
src/schemas/examples/: import_obs.py  (+9 more)
standard/protobuf-schema/: firstmile.proto
standard/tests/: readme.md
(+50 files in other folders)
